2006-03-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sensor-utils.c (ipmi_sensor_decode_value),
	libfreeipmi/include/freeipmi/ipmi-sensor-utils.h: Add and use new
	analog data format definition validator.
	
2006-03-23  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-messaging-support-cmds.c,
	libfreeipmi/include/freeipmi/ipmi-messaging-support-cmds.h:
	Support 20 byte passwords in ipmi 2.0 version of Set User
	Password.

	* libfreeipmi/include/freeipmi/udm/, libfreeipmi/src/udm/, fish/,
	ipmipower/: Support 20 byte ipmi 2.0 passwords.

	* fish/src/bmc-conf2.c (check_bmc_user_password): Fix logic bug.

	* fish/src/bmc-conf2.c (check_bmc_user_password),
	libfreeipmi/include/freeipmi/ipmi-comp-code-spec.h,
	libfreeipmi/src/ipmi-error.c (ipmi_strerror_r): Support set user
	password completion codes.

	* ipmipower/ipmipower.8.in: Add workaround note about long
	passwords on Intel machines.

	* libfreeipmi/: Re-work privilege level validation macros.  Re-do
	parameters of fill_lan_session_hdr() and
	fill_rmcpplus_session_hdr().
	
2006-03-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-utils.c,
	libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.h
	(ipmi_calculate_rmcpplus_session_keys): Support both k_g and user
	password.

	* ipmipower/: Change -k option -m option.  Add new -k option to
	support global BMC key k_g.

	* fish/: Various bug fixes for SOL and RMCPPLUS Privilege level
	configurations.

	* libfreeipmi/, fish/: Support max length of 20 bytes for K_R and
	K_G desribed in IPMI 2.0 errata.

2006-03-21  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-cipher-suite-spec.c
	(ipmi_cipher_suite_id_to_algorithms): Fix bug.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c (ipmi_calculate_sik,
	ipmi_calculate_rmcpplus_session_keys): Handle name only lookup
	flag in sik calculations.  Fix several corner cases and cleaned up
	code.

	* libfreeipmi/src/ipmi-rmcpplus-utils.c (_calculate_k_rakp_hmac):
	Fix K calculation bug.
