@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: ipmipower.8.in,v 1.39 2006-03-24 01:29:40 chu11 Exp $
+\."$Id: ipmipower.8.in,v 1.40 2006-03-24 17:42:56 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2003 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -251,9 +251,9 @@ to assume all cipher suite records are OEM formatted records.
 This option has been specifically implemented to get around a 
 compliance issue.  For more information, see WORKAROUNDS below.
 .TP
-.I "-X, --intel-2-0-session-activation"
-Modifies the IPMI 2.0 session activation protocol for non-compliant
-Intel machines.  For more information, see WORKAROUNDS below.
+.I "-X, --intel-2-0-session"
+Modifies the IPMI 2.0 session protocol for non-compliant Intel
+machines.  For more information, see WORKAROUNDS below.
 .if @WITH_DEBUG@ \{
 .TP
 .I "-D, --debug"
@@ -457,8 +457,8 @@ toggle accept-session-id-zero functionality.
 toggle check-unexpected-authcode functionality.
 .I "cipher-suite-records-all-oem [on|off]"
 toggle cipher-suite-records-all-oem functionality.
-.I "intel-2-0-session-activation [on|off]"
-toggle intel-2-0-session-activation functionality.
+.I "intel-2-0-session [on|off]"
+toggle intel-2-0-session functionality.
 .if @WITH_DEBUG@ \{
 .TP
 .I "debug [on|off]"
@@ -640,19 +640,12 @@ option must be set.  This option will force OEM record formats to
 always be assumed.
 
 Intel SE7520AF2 with Intel Server Management Module (Professional
-Edition): The session activation protocol has several bugs the key
-exchange protocol.  In order to work around these problems, the -X
-(--intel-2-0-session-activation) option must be set.  This workraround
-includes an automatic acceptance of the integrity check value from a
-RAKP 4 response if the integrity algorithm is set to MD5-128.
-
-Intel SE7520AF2 with Intel Server Management Module (Professional
-Edition): When using an integrity algorithm of HMAC-MD5-128 (cipher
-suite ids 7 and 8) or MD5-128 (cipher suite ids 11 and 12) and a
-password greater than 16 bytes in length, the remote BMC truncates
-password characters past the 16th byte when generating hashed
-authentication codes, signatures, or encryption keys.  The workaround
-is to therefore truncate your inputted password to 16 bytes.
+Edition): The session activation and session management protocol has
+several bugs which can be worked around using the the -X
+(--intel-2-0-session) option.  The workrarounds include several
+security modifications including an automatic acceptance of a RAKP 4
+response if the integrity algorithm is MD5-128 and password truncation
+if the authentication algorithm is HMAC-MD5-128.
 
 .SH "TROUBLESHOOTING"
 Most often, problems with ipmipower involve a misconfiguration of the
